# shifty-dioxus

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  FULL_PROJECT_DESCRIPTION.md  PROJECT_DESCRIPTION.md  README.md  cli-update-version.sh  default.nix  flake.nix  index.html  input.css  openapi.json  result  run-tailwind.sh  tailwind.config.js  update_versions.sh
.claude/: gsd-file-manifest.json  settings.local.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/commands/gsd/: add-tests.md  ai-integration-phase.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  capture.md  cleanup.md  code-review.md  complete-milestone.md  config.md  discuss-phase.md  docs-update.md  eval-review.md  execute-phase.md  explore.md  extract-learnings.md  fast.md  forensics.md  graphify.md  health.md  help.md  import.md  inbox.md  ingest-docs.md  manager.md  map-codebase.md  milestone-summary.md  new-milestone.md  new-project.md  pause-work.md  phase.md  plan-phase.md  plan-review-convergence.md  pr-branch.md  profile-user.md  progress.md  quick.md  resume-work.md  review.md  (+15 more)
.claude/get-shit-done/references/: artifact-types.md  model-profile-resolution.md  verification-patterns.md
.claude/get-shit-done/templates/: phase-prompt.md
.claude/get-shit-done/workflows/: ai-integration-phase.md  autonomous.md  complete-milestone.md  discovery-phase.md  discuss-phase-assumptions.md  discuss-phase.md  eval-review.md  execute-phase.md  execute-plan.md  explore.md  health.md  help.md  ingest-docs.md  new-milestone.md  new-project.md  note.md  plan-phase.md  plan-review-convergence.md  profile-user.md  reapply-patches.md  research-phase.md  resume-project.md  secure-phase.md  sketch.md  spec-phase.md  sync-skills.md  transition.md  ui-phase.md  ui-review.md  undo.md  update.md  validate-phase.md  verify-phase.md  verify-work.md
.claude/hooks/: gsd-check-update-worker.js  gsd-check-update.js  gsd-context-monitor.js  gsd-phase-boundary.sh  gsd-prompt-guard.js  gsd-read-guard.js  gsd-read-injection-scanner.js  gsd-session-state.sh  gsd-statusline.js  gsd-validate-commit.sh  gsd-workflow-guard.js
.github/workflows/: release.yml  rust.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
assets/: config.json  tailwind.css
design_handoff_shifty/: README.md  Shifty Preview.html
openspec/: config.yaml
openspec/changes/: REDESIGN_PLAN.md
openspec/changes/auto-refresh-shiftplan/: proposal.md
openspec/changes/frontend-permission-levels/: proposal.md
openspec/changes/redesign-01-design-tokens/: proposal.md
public/: tailwind.css
rest-types/: Cargo.toml
rest-types/src/: lib.rs
shifty-design/: README.md
shifty-design/project/: Shifty Design System.html  Shifty Preview Standalone.html  Shifty Preview v1 (kompakt).html  Shifty Preview.html  blocks.jsx  preview-data.jsx  tokens.jsx  week-preview.jsx
src/: api.rs  app.rs  auth.rs  base_types.rs  blog.rs  error.rs  home.rs  js.rs  loader.rs  main.rs  not_authenticated.rs  router.rs  shiftplan.rs  state.rs  top_bar.rs  week_view.rs
src/component/: add_extra_days_form.rs  add_extra_hours_choice.rs  add_extra_hours_form.rs  base_components.rs  booking_log_table.rs  contract_modal.rs  day_aggregate_view.rs  dialog.rs  dropdown_base.rs  employee_short.rs  employee_view.rs  employee_weekly_histogram.rs  employee_work_details_form.rs  employees_list.rs  employees_shell.rs  error_view.rs  extra_hours_modal.rs  footer.rs  mod.rs  modal.rs  overlay.rs  shiftplan_tab_bar.rs  slot_edit.rs  tooltip.rs  top_bar.rs  user_management_tab_bar.rs  week_view.rs  weekly_overview_chart.rs  working_hours_mini_overview.rs  working_hours_overview_layout_toggle.rs
src/i18n/: cs.rs  de.rs  en.rs  i18n.rs  mod.rs
src/page/: billing_period_details.rs  billing_periods.rs  custom_extra_hours_management.rs  employee_details.rs  employees.rs  home.rs  mod.rs  my_employee_details.rs  my_shifts.rs  not_authenticated.rs  sales_person_details.rs  shiftplan.rs  text_template_management.rs  user_details.rs  user_management.rs  weekly_overview.rs
src/service/: auth.rs  billing_period.rs  booking_conflict.rs  booking_log.rs  config.rs  dropdown.rs  employee.rs  employee_work_details.rs  error.rs  i18n.rs  mod.rs  slot_edit.rs  text_template.rs  theme.rs  tooltip.rs  ui_prefs.rs  user_management.rs  weekly_summary.rs  working_hours_mini.rs
src/state/: auth_info.rs  booking_log.rs  config.rs  dropdown.rs  employee.rs  employee_work_details.rs  mod.rs  sales_person_available.rs  shiftplan.rs  slot_edit.rs  state.rs  text_template.rs  tooltip.rs  user_management.rs  week.rs  weekly_overview.rs  working_hours.rs
src/tests/: api_tests.rs  error_tests.rs  i18n_tests.rs  integration_tests.rs  mod.rs  service_tests.rs  state_tests.rs  utils_tests.rs  volunteer_work_tests.rs  week_tests.rs
(+191 files in other folders)
