[package]
name = "shifty-dioxus"
version = "0.11.1"
authors = ["Simon Goller <neosam+github@posteo.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6.0", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.6.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["rc"] }
serde_json = "1.0.117"
async-recursion = "1.1.1"
futures = "0.3.30"
thiserror = "2.0.9"
futures-util = "0.3.30"
js-sys = "0.3.69"
manganis = "0.6.0"

[dependencies.rest-types]
path = "rest-types"
[dependencies.uuid]
version = "*"
features = ["v4", "js"]
[dependencies.time]
version = "0.3.36"
features = ["macros"]
[dependencies.web-sys]
version = "0.3.69"
features = ["Window", "Navigator"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
